# controle-de-estoque-pereciveis

./: README.md
controle_de_validade/: .gitignore  pyproject.toml
controle_de_validade/controle_de_validade/: __init__.py  calendar_widget.py  dataBase.py  layout_pdf.py  tela_principal.py  teste.py
controle_de_validade/data/: dataBaseGlobal.db  dataBaseLocal.db
controle_de_validade/tests/: test_controle_de_validade.py
