[tool.poetry]
name = "controle_de_validade"
version = "0.1.0"
description = ""
authors = ["LuizEduardo-service <luizeduardo.service@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
reportlab = "^3.6.10"
tk-tools = "^0.16.0"
tkcalendar = "^1.6.1"
easygui = "^0.98.3"
db-sqlite3 = "^0.0.1"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
